# the-fig-tree

./: .gitignore  README.md  main.py  microblog.py  pyproject.toml
app/: __init__.py  routes.py
app/model/: Post.py
app/posts/: 16-binti.md  17-pale-fire.md  18-hunger.md  19-sophies-world.md  20-metamorphosis.md  eating-fire-and-drinking-water.md  educated.md  flowers-for-algernon.md  frankenstein.md  kafka-on-the-shore.md  kim-jiyoung-born-1982.md  mans-search-for-meaning.md  normal-people.md  notes-from-the-underground.md  on-being-ill.md  recursion.md  sea-of-tranquility.md  the-anxious-perfectionist.md  the-bell-jar.md  the-diary-of-a-young-girl.md  the-year-of-magical-thinking.md  this-is-how-you-lose-the-time-war.md  virginia-woolf-and-vita-sackvillewest-love-letters.md
app/static/: index.css
app/static/css/: index.css
app/templates/: base.html  index.html  post.html
app/templates/partials/: post.html  posts.html
